welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:10: error: not found: value get
      setPos(0,get(Y)+1)
               ^LineByLine:10: error: not found: value Y
      setPos(0,get(Y)+1)
                   ^