welcome.lessons.welcome.traversal.line.TraversalByLine.scala.code
override def run() {
  gauche()
  var compteur:Int=0
  while (!(getX() ==(getMondeLargeur()-1) && getY() == getMondeHauteur()-1)) {
    ecritMessage(compteur)
    setPos(getX()+1,getY())
    compteur+=1
    if (estFaceMur() && !(getY()==6) ){
      ecritMessage(compteur)
      compteur+=1
      setPos(0,get(Y)+1)
    }   
  }
  ecritMessage(compteur)
}